Fixing empty cells in IE not having border by adding border-collapse css property

--- a/fid-web/src/main/webapp/style/pageStyles/safetyNetworkProduct.css
+++ b/fid-web/src/main/webapp/style/pageStyles/safetyNetworkProduct.css
@@ -14,10 +14,10 @@ div.registerThisNow {
     font-size: 11px;
 }
 
-.productInformation {
+table.productInformation {
 	width: 100%;
-	border-collapse: separate;
 	border-spacing: 2px 2px;
+    border-collapse: collapse;
 }
 
 table.productInformation td {
